--- a/.github/workflows/push2FH-space.yml
+++ b/.github/workflows/push2FH-space.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://rajkumar218:$HF_TOKEN@huggingface.co/spaces/rajkumar218/image2text main   
+        run: git push --force https://rajkumar218:$HF_TOKEN@huggingface.co/spaces/rajkumar218/image2text main   
